<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivArticleImage"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:fontFamily="@font/open_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
        app:layout_constraintTop_toTopOf="@+id/ivArticleImage" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:fontFamily="@font/open_sans"
        android:maxLines="7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/ivArticleImage"/>

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/source"
        android:textSize="13sp"
        android:fontFamily="@font/open_sans"
        app:layout_constraintStart_toStartOf="@id/ivArticleImage"
        app:layout_constraintTop_toBottomOf="@id/ivArticleImage"/>

    <TextView
        android:id="@+id/tvPublishedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/published_at"
        android:textAlignment="textEnd"
        android:fontFamily="@font/open_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSource"
        app:layout_constraintStart_toStartOf="@id/tvSource"
        />

</androidx.constraintlayout.widget.ConstraintLayout>